# dodone-tauri

./: .gitattributes  README.md  index.html  package.json  pnpm-lock.yaml  version.md  vite.config.ts
src-tauri/: Cargo.toml  info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/icon.iconset/: Contents.json
src-tauri/mas/: _entitlements.mas_copy.plist  dodonemasdev.provisionprofile  dodonemasdistribute.provisionprofile  entitlements.mas.plist
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: constant.rs  lib.rs  m20220101_000001_create_table.rs  m20251202_053342_v1_1.rs
src-tauri/migration/src/initial_entities/: mod.rs  next_task.rs  notification.rs  prelude.rs  task.rs  task_anchor.rs  task_group.rs  task_in_day.rs  task_target_record.rs  task_view.rs  task_view_task.rs
src-tauri/src/: commands.rs  constants.rs  database.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: biz_util.rs  constants.rs  database.rs  doing_window.rs  image.rs  next_task.rs  notification.rs  task.rs  task_anchor.rs  task_group.rs  task_in_day.rs  task_target_record.rs  task_view.rs  task_view_task.rs  window.rs
src-tauri/src/entities/: mod.rs  next_task.rs  notification.rs  prelude.rs  report.rs  task.rs  task_anchor.rs  task_group.rs  task_in_day.rs  task_target_record.rs  task_view.rs  task_view_task.rs
src-tauri/src/utils/: datetime.rs  event.rs  option3.rs
src-tauri/tauri-plugin-eventkit/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
src-tauri/tauri-plugin-eventkit/examples/tauri-app/: package.json
src-tauri/tauri-plugin-eventkit/guest-js/: index.ts
src-tauri/tauri-plugin-eventkit/permissions/: default.toml
src-tauri/tauri-plugin-eventkit/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  windows.rs
src-tauri/tauri-plugin-eventkit/swift/: Package.resolved  Package.swift
(+198 files in other folders)
