[package]
name = "dodone"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [".", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dodone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
migration = { path = "migration" }

tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sea-orm = { version = "2.0.0-rc", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
	"macros",
	"schema-sync",
] }
sea-orm-cli = "2.0.0-rc"

chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
chksum-md5 = "0.1.0"
nix = "0.30.1"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
file-format = "0.28.0"
