[package]
name = "tauri-plugin-eventkit"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-eventkit"
# build = "build.rs"

[dependencies]
tauri = { version = "2.9.2" }
serde = "1.0"
thiserror = "2"
swift-rs = "1.0.7"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
swift-rs = { version = "1.0.7", features = ["build"] }
